Remove API Path

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,13 +6,9 @@ http {
     server {
         listen 80;
         location /bsd {
-            proxy_pass             http://127.0.0.1:8800;
+            proxy_pass             http://bsd:8800/;
             proxy_set_header       Host $host;
         }
 
-        location /bsd/api {
-            proxy_pass             http://127.0.0.1:8800/api;
-            proxy_set_header       Host $host;
-        }
     }
 }
